[package]
name = "eit-stream"
version = "0.2.0"
authors = ["Cesbo Developers Team"]
build = "src/build.rs"
edition = "2018"

[dependencies]
error-rules = "0.2"
chrono = "0.4"
config = { path = "../libconfig" }
udp = { path = "../libudp" }
mpegts = { path = "../libmpegts" }
epg = { path = "../libepg" }

[features]
static = ["epg/static"]

[profile.release]
panic = "abort"
opt-level = 3
lto = true
