[package]
name = "eit-stream"
version = "0.2.1"
authors = ["Cesbo Developers Team"]
build = "src/build.rs"
edition = "2018"

[dependencies]
error-rules = "0.2"
chrono = "0.4"
config = { git = "ssh://git@github.com/cesbo/libconfig.git", branch = "master" }
udp = { git = "ssh://git@github.com/cesbo/libudp.git", branch = "master" }
mpegts = { path = "../libmpegts" }
epg = { path = "../libepg" }

[features]
static = ["epg/static"]

[profile.release]
panic = "abort"
opt-level = 3
lto = true
